added links to individual github pages for projects.

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -9,16 +9,22 @@
 <i class="fas fa-pencil-alt fa-5x" style="color: #c76ec6"></i> <h1>PROJECTS</h1>
 <p>Below are two of my "main projects" I've been working on:</p>
 <div class="row">
-    <div class="col"><a href="/weather/" target="_blank" id="weather-zip"><i class="fas fa-cloud fa-5x" id="weather-zip"></i><br><span style="color: white;">Weather Zip</span></div></a></div>
+<div class="col">
+<a href="/weather/" target="_blank" id="weather-zip"><i class="fas fa-cloud fa-5x" id="weather-zip"></i><br><span style="color: white;">Weather Zip</span></a><br>
+<a href="https://github.com/davidranich/weather-zip" target="_blank" class="code">Click here for the code</a>
+</div>
+</div>
     <br>
     <div class="row">
-    <div class="col"><a href="/flappy/" target="_blank"><img src="/img/bird.png" class="flappy"><br><span style="color: white;">Flappy Box</span></a></div>
+    <div class="col"><a href="/flappy/" target="_blank"><img src="/img/bird.png" class="flappy"><br><span style="color: white;">Flappy Box</span></a><br>
+    <a href="https://github.com/davidranich/flappy-box" target="_blank" class="code">Click here for the code</a>
+    </div>
 </div>
 </section>
 <section>
 <hr>
 <i class="fab fa-github-alt fa-5x" style="color: #c76ec6"></i> <h1>CODE</h1>
-<p>To view any code for my projects, including <a href="https://github.com/davidranich/david-ranich-dot-com" target="_blank">my website's code</a>, please visit <a href="https://github.com/davidranich" target="_blank">my GitHub</a>!</p>
+<p>To view any code for my projects, including <a href="https://github.com/davidranich/david-ranich-dotcom" target="_blank">my website's code</a>, please visit <a href="https://github.com/davidranich" target="_blank">my GitHub</a>!</p>
 </section>
 <section>
 <hr>
