added link to github repo

--- a/views/flappy-box.ejs
+++ b/views/flappy-box.ejs
@@ -25,7 +25,9 @@ canvas {
 
 <body>
 <h3 style="text-align: center; font-family: 'Press Start 2P', cursive;">Flappy Box</h3>
-<p style="text-align: center; font-family: 'Rajdhani', sans-serif;"><strong>On Desktop:</strong> Use your <kbd>space bar</kbd> or click your <kbd>left mouse button</kbd> to control box! Otherwise tap on your phone screen!</p>
+<p style="text-align: center; font-family: 'Rajdhani', sans-serif;"><strong>On Desktop:</strong> Use your <kbd>space bar</kbd> or click your <kbd>left mouse button</kbd> 
+    to control box! Otherwise tap on your phone screen!<br><a href="https://github.com/davidranich/flappy-box" style="text-align: center; font-family: 'Rajdhani', sans-serif;" target="_blank">Here's the code</a></p>
+    
 
 <script src="/js/flappy.js"></script>
 </body>
