condensed two sections into one (code + projects)

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -20,11 +20,8 @@
     <a href="https://github.com/davidranich/flappy-box" target="_blank" class="code">Click here for the code</a>
     </div>
 </div>
-</section>
-<section>
-<hr>
-<i class="fab fa-github-alt fa-5x" style="color: #c76ec6"></i> <h1>CODE</h1>
-<p>To view any code for my projects, including <a href="https://github.com/davidranich/david-ranich-dotcom" target="_blank">my website's code</a>, please visit <a href="https://github.com/davidranich" target="_blank">my GitHub</a>!</p>
+<br>
+<p>You can <a href="https://github.com/davidranich" target="_blank">find me on GitHub</a>, which also showcases <a href="https://github.com/davidranich/david-ranich-dotcom" target="_blank">my website's code</a>!</p>
 </section>
 <section>
 <hr>
