changed colors to reflect background image

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -2,11 +2,12 @@
 <img src="/img/davey.jpg" id="davey">
 <br>
 <br>
-<p>I'm a developer who loves working with <em class="bold">C-Sharp</em> and <em class="bold">JavaScript</em>.<br>Specifically: <em class="bold2">Node.js</em>, <em class="bold2">ASP.NET</em>, <em class="bold2">Unity</em>, <em class="bold2">Vue.js</em>, and <em class="bold2">React</em>.</p>
+<p>I'm a developer who loves working with <em class="bold">C-Sharp</em> and <em class="bold">JavaScript</em>.<br>Specifically: <span style="color: #c974c8">Node.js</span>, 
+    <span style="color: #c974c8">ASP.NET</span>, <span style="color: #c974c8">Unity</span>, <span style="color: #c974c8">Vue.js</span>, and <span style="color: #c974c8">React</span>.</p>
 </section>
 <section>
 <hr>
-<i class="fas fa-pencil-alt fa-5x" style="color: #c76ec6"></i> <h1>PROJECTS</h1>
+<i class="fas fa-pencil-alt fa-5x" style="color: #c974c8"></i> <h1>PROJECTS</h1>
 <p>Below are two of my "main projects" I've been working on:</p>
 <div class="row">
 <div class="col">
@@ -25,8 +26,8 @@
 </section>
 <section>
 <hr>
-    <i class="fas fa-phone fa-5x" style="color: #c76ec6"></i> <h1>CONTACT</h1>
+    <i class="fas fa-phone fa-5x" style="color: #c974c8"></i> <h1>CONTACT</h1>
     <p>You can reach me by the following options below:</p>
-    <p><i class="fas fa-at fa-2x" style="color: #c76ec6"></i> <a href="mailto:ranich.david@gmail.com">ranich.david@gmail.com</a><br>
-    <i class="fab fa-linkedin fa-2x" style="color: #c76ec6"></i> <a href="https://www.linkedin.com/in/david-ranich/" target="_blank">https://www.linkedin.com/in/david-ranich/</a></p>
+    <p><i class="fas fa-at fa-2x" style="color: #c974c8"></i> <a href="mailto:ranich.david@gmail.com">ranich.david@gmail.com</a><br>
+    <i class="fab fa-linkedin fa-2x" style="color: #c974c8"></i> <a href="https://www.linkedin.com/in/david-ranich/" target="_blank">https://www.linkedin.com/in/david-ranich/</a></p>
 </section>
