changed the display style of technologies used

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -2,8 +2,8 @@
 <img src="/img/davey.jpg" id="davey">
 <br>
 <br>
-<p>I'm a developer who loves working with <em class="bold">C-Sharp</em> and <em class="bold">JavaScript</em>.<br>Specifically: <span style="color: #c974c8">Node.js</span>, 
-    <span style="color: #c974c8">ASP.NET</span>, <span style="color: #c974c8">Unity</span>, <span style="color: #c974c8">Vue.js</span>, and <span style="color: #c974c8">React</span>.</p>
+<p>I'm a developer who loves working with <em class="bold">C-Sharp</em> and <em class="bold">JavaScript</em>.<br>Specifically: <em><u>Node.js</u></em>, 
+    <em><u>ASP.NET</u></em>, <em><u>Unity</u></em>, and <em><u>Vue.js</u></em>.</p>
 </section>
 <section>
 <hr>
@@ -11,13 +11,13 @@
 <p>Below are two of my "main projects" I've been working on:</p>
 <div class="row">
 <div class="col">
-<a href="/weather/" target="_blank" id="weather-zip"><i class="fas fa-cloud fa-5x" id="weather-zip"></i><br><span style="color: white;">Weather Zip</span></a><br>
+<a href="/weather/" target="_blank" id="weather-zip"><i class="fas fa-cloud fa-5x" id="weather-zip"></i><br><span style="color: white;">Weather Zip</em></a><br>
 <a href="https://github.com/davidranich/weather-zip" target="_blank" class="code">Click here for the code</a>
 </div>
 </div>
     <br>
     <div class="row">
-    <div class="col"><a href="/flappy/" target="_blank"><img src="/img/bird.png" class="flappy"><br><span style="color: white;">Flappy Box</span></a><br>
+    <div class="col"><a href="/flappy/" target="_blank"><img src="/img/bird.png" class="flappy"><br><span style="color: white;">Flappy Box</em></a><br>
     <a href="https://github.com/davidranich/flappy-box" target="_blank" class="code">Click here for the code</a>
     </div>
 </div>
