--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ by: Scaredpie (https://www.reddit.com/user/Scaredpie)
 */
 
 #mountains {
-    /*background-image: url("/img/davey-bg4.png"); */
+    background-image: url("/img/davey-bg4.png");
     height: 1100px;
     width: 100%;
     background-position: center bottom;
