fixed background image issue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('Header') -%>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<body style="background-image: url(/img/davey-bg4.png)">
+<body>
 <div id="mountains"><h1>David Ranich</h1><p>Welcome to my website. Please click that arrow to explore.</p><br>
     <div class="arrow bounce">
         <a href="#content"><i class="fa fa-arrow-down fa-4x" style="color: #fde0eb;"></i></a>
