removed C# and technologies.

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -2,8 +2,7 @@
 <img src="/img/davey.jpg" id="davey">
 <br>
 <br>
-<p>I'm a developer who loves working with <em class="bold">C-Sharp</em> and <em class="bold">JavaScript</em>.<br>Specifically: <em><u>Node.js</u></em>, 
-    <em><u>ASP.NET</u></em>, <em><u>Unity</u></em>, and <em><u>Vue.js</u></em>.</p>
+<p>I'm a website developer who loves working with <em class="bold">JavaScript</em>.<br>Specifically: <em><u>Node.js</u></em> and <em><u>Vue.js</u></em>.</p>
 </section>
 <section>
 <hr>
